kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: applying
  namespace: anticorona
  labels:
    app: applying
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: applying
